--- a/index.html
+++ b/index.html
@@ -21,5 +21,10 @@
     <p align="center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem voluptas nisi facere, amet veritatis necessitatibus quod quae perferendis explicabo sequi, modi voluptate eligendi delectus corporis ut, atque beatae odit eum soluta reiciendis reprehenderit! Iure sunt minima quae consectetur, voluptatum nisi reprehenderit provident odit dolorum ea, modi sapiente rem repudiandae. Quod!</p>
     <p align="right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos omnis iste quisquam in? Maiores at adipisci eaque ex non eius delectus, pariatur incidunt, doloremque autem doloribus, illo vero magnam iusto blanditiis iure sit id cupiditate quos! Magnam debitis, et harum quibusdam tempore rem ratione itaque nostrum fuga ut enim, cum nam est? Explicabo delectus dignissimos fuga quasi, quis possimus ipsum, praesentium a est recusandae veritatis repudiandae, at voluptatibus sequi tenetur.</p>
     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laboriosam commodi placeat molestiae temporibus facere atque quidem delectus vel ea, eius ducimus facilis excepturi molestias. Mollitia doloremque eveniet ad excepturi placeat ex, adipisci consequuntur dolores alias fugit temporibus maiores, exercitationem error laborum neque perspiciatis rem? Id placeat reprehenderit dolorem odit neque optio. Fugit sit quam delectus excepturi nesciunt expedita in animi! Consectetur, expedita fuga quia similique ipsa vel soluta quod laboriosam dicta voluptatem eum iste omnis odit modi, ipsum cumque?</p>
+
+    <img src="images/Core-2-e1515124450640.jpg" alt="" width="300">
+    <img src="images/Beautiful-Reverse-Warrior-ot-Sunset-on-Rock-over-Ocean-copy-1-e1517104262553.jpeg" alt="" width="300">
+    <img src="images/R.jfif" alt="" width="300">
+
 </body>
 </html>
