--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <h4>This is heading 4</h4>
     <h5>This is heading 5</h5>
     <h6>This is heading 6</h6>
+    <hr><hr>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium labore non molestias? Illo praesentium, harum corporis iure eligendi libero eos porro nulla maiores accusamus delectus quia minima! Voluptas, quo minima?</p>
     <p align="center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem voluptas nisi facere, amet veritatis necessitatibus quod quae perferendis explicabo sequi, modi voluptate eligendi delectus corporis ut, atque beatae odit eum soluta reiciendis reprehenderit! Iure sunt minima quae consectetur, voluptatum nisi reprehenderit provident odit dolorum ea, modi sapiente rem repudiandae. Quod!</p>
     <p align="right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos omnis iste quisquam in? Maiores at adipisci eaque ex non eius delectus, pariatur incidunt, doloremque autem doloribus, illo vero magnam iusto blanditiis iure sit id cupiditate quos! Magnam debitis, et harum quibusdam tempore rem ratione itaque nostrum fuga ut enim, cum nam est? Explicabo delectus dignissimos fuga quasi, quis possimus ipsum, praesentium a est recusandae veritatis repudiandae, at voluptatibus sequi tenetur.</p>
     <p align="justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laboriosam commodi placeat molestiae temporibus facere atque quidem delectus vel ea, eius ducimus facilis excepturi molestias. Mollitia doloremque eveniet ad excepturi placeat ex, adipisci consequuntur dolores alias fugit temporibus maiores, exercitationem error laborum neque perspiciatis rem? Id placeat reprehenderit dolorem odit neque optio. Fugit sit quam delectus excepturi nesciunt expedita in animi! Consectetur, expedita fuga quia similique ipsa vel soluta quod laboriosam dicta voluptatem eum iste omnis odit modi, ipsum cumque?</p>
     <br>
+    <hr color="red" size="5" width="700">
     <a href="images/Core-2-e1515124450640.jpg"> <img src="images/Core-2-e1515124450640.jpg" alt="" height="50" title="yoga pose 1"></a>
 
     <a href="images/Beautiful-Reverse-Warrior-ot-Sunset-on-Rock-over-Ocean-copy-1-e1517104262553.jpeg"> <img src="images/Beautiful-Reverse-Warrior-ot-Sunset-on-Rock-over-Ocean-copy-1-e1517104262553.jpeg" alt="" width="75" title="yoga pose 2"></a>
@@ -35,6 +37,21 @@
     <a href="https://www.youtube.com/watch?v=hJbRpHZr_d0" target="_blank"><img src="images/Youtube-Icon-2000x2000.png" alt="" width="50"</a>
 
     <br><br><br><br>
+    <hr>
 
+    <font color="orange" size=7 face="arial"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="black" size=6 face="kokila"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="yellow" size=5 face="Garamond"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="pink" size=4 face="MS Serif"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="green" size=3 face="Courier New"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="red" size=2 face="Lucida Handwriting"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+    <font color="brown" size=1 face="Papyrus"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio ullam natus nesciunt reprehenderit quae, minus necessitatibus ea sequi odio nam, impedit ipsum non. Debitis rem consequatur explicabo saepe totam numquam quis minus quod optio labore et aliquam, mollitia vel a nisi iusto, repudiandae non, sequi voluptate vitae doloribus ratione obcaecati?</font><br>
+<hr>
+<h2>Links</h2>
+<a href="resources/yogamanual.pdf">Download yoga postures</a><br>
+<a href="resources/yogavideo.mp4">Download yoga video</a><br>
+<a href="resources/yogamusic.mp3">Download yoga music</a><br>
+<a href="https://www.youtube.com/watch?v=v7AYKMP6rOE">Yoga video 1</a>
+<br><br><br>
 </body>
 </html>
