--- a/index.html
+++ b/index.html
@@ -53,5 +53,10 @@
 <a href="resources/yogamusic.mp3">Download yoga music</a><br>
 <a href="https://www.youtube.com/watch?v=v7AYKMP6rOE">Yoga video 1</a>
 <br><br><br>
+<hr>
+<video src="resources/1.mp4" height="250" width="400" controls></video>
+<iframe src="https://www.youtube.com/embed/JoYUYWQj4wo" height="250" width="400" controls></iframe>
+
+
 </body>
 </html>
