--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 <hr>
 <video src="resources/1.mp4" height="250" width="400" controls></video>
 <iframe src="https://www.youtube.com/embed/JoYUYWQj4wo" height="250" width="400" controls></iframe>
+<audio src="resources/yogamusic.mp3 hidden autoplay"></audio>
 
 
 </body>
