--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
     <title>Learning Yoga</title>
 </head>
 
-<body bgcolor="#00264d" text="white"
+<body 
+
+   <a href="index.html">Home</a> 
+   <a href="about us.html">About us</a>
+   <a href="gallery.html">Gallery</a>
+   <a href="courses">Courses</a>
+   <a href="schedule.html">Schedule</a>
+   <a href="contact.html">Contact us</a>
+   <a href="register.html">Register</a>
+   <h1>schedule</h1>
+
+   
+
+   <ol>
+    <li>Morning</li>
+    <ul>
+        <li>Prayers</li>
+        <li>Sukshm Yoga</li>
+        <li>Sewa</li>
+    </ul>
+    <li>Afternoon</li>
+    <ol type="A"></ol>
+    </ol>
+    <li>Evening</li>
+    <dl>
+        <dt>Hath Yoga</dt>
+        <dd>Hath Yoga is a collection of Yoga postures</dd>
+        <dt>Suksh Yoga</dt>
+        <dd>Suksh yoga is the warm up exercises</dd>
+    </dl>
+   
+    
+   </ol>
+   
+    
+   </body>
+
+<body bgcolor="#00264d" text="white"></body>
     <h1>this is a website to learn yoga in india</h1>
     <h1>This is heading 1</h1>
     <h2>This is heading 2</h2>
@@ -56,7 +93,7 @@
 <hr>
 <video src="resources/1.mp4" height="250" width="400" controls></video>
 <iframe src="https://www.youtube.com/embed/JoYUYWQj4wo" height="250" width="400" controls></iframe>
-<audio src="resources/yogamusic.mp3 hidden autoplay"></audio>
+<audio src="resources/yogamusic.mp3" controls></audio>
 
 
 </body>
