--- a/gallery.html
+++ b/gallery.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <table width="1000" align="center" bgcolor="pink" height="50">
+<body background="images/bg3.jpg">
+    <table width="1000" align="center" bgcolor="pink" height="50" bordercolor="red">
    <tr>
     <td><a href="index.html">Home</a></td> 
     <td><a href="about us.html">About us</a></td>
@@ -19,7 +19,8 @@
     </td>
 </tr> 
 </table>
-    <h1>Gallery</h1>
+    <h1>Gallery
+    </h1>
 
     <table border="1" cellspacing="15" cellpadding="15" align="center">
         <tr height="200">
